force-app/main/default/objects/WorkCycle__c/WorkCycle__c.object-meta.xml
<CustomObject>
    <label>Work Cycle</label>
    <nameField>
        <displayFormat>WCL-{000000}</displayFormat>
        <label>Work cycle ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Cycles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>