force-app/main/default/objects/WorkCycle__c/fields/AddSeniority__c.field-meta.xml
<CustomField>
    <fullName>AddSeniority__c</fullName>
    <label>Add Seniority</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>