force-app/main/default/objects/WorkCycle__c/fields/AdjustAnnualLeave__c.field-meta.xml
<CustomField>
    <fullName>AdjustAnnualLeave__c</fullName>
    <label>Adjust Annual Leave</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>