force-app/main/default/objects/WorkCycle__c/fields/Annual_Leave_Current_Year_Last_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Annual_Leave_Current_Year_Last_Cycle__c</fullName>
    <label>Annual Leave - Current Year Last Cycle</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>