force-app/main/default/objects/WorkCycle__c/fields/Annual_Leave_Current_Year_Remain_formula__c.field-meta.xml
<CustomField>
    <fullName>Annual_Leave_Current_Year_Remain_formula__c</fullName>
    <formula>max( 
+ Annual_Leave_Current_Year_Last_Cycle__c
+ AddSeniority__c 
+ Monthly_added__c 
+ AdjustAnnualLeave__c 
- max(AnnualLeaveUsed__c-Annual_Leave_Last_Year_Last_Cycle__c,0)
, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Leave - Current Year Remain</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>