force-app/main/default/objects/WorkCycle__c/fields/Annual_Leave_Last_Year_Last_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Annual_Leave_Last_Year_Last_Cycle__c</fullName>
    <inlineHelpText>Annual leave of last year remain from last cycle</inlineHelpText>
    <label>Annual Leave - Last Year Last Cycle</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>