force-app/main/default/objects/WorkCycle__c/fields/Annual_Leave_Last_Year_Remain_Formula__c.field-meta.xml
<CustomField>
    <fullName>Annual_Leave_Last_Year_Remain_Formula__c</fullName>
    <formula>max( 
  Annual_Leave_Last_Year_Last_Cycle__c 
-  AnnualLeaveUsed__c
, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Leave - Last Year Remain</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>