force-app/main/default/objects/WorkCycle__c/fields/AnnualLeaveUsed__c.field-meta.xml
<CustomField>
    <fullName>AnnualLeaveUsed__c</fullName>
    <formula>AnnualLeaveDaysFull__c +  AnnualLeaveDaysHalf__c /2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Leave Used</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>