force-app/main/default/objects/WorkCycle__c/fields/AnnualLeavewillUseHalf__c.field-meta.xml
<CustomField>
    <fullName>AnnualLeavewillUseHalf__c</fullName>
    <label>Annual Leave will Use (Half)</label>
    <summaryFilterItems>
        <field>LeaveDay__c.BusinessDay__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.Half_Day__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.InCycle__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.Paid_Type__c</field>
        <operation>equals</operation>
        <value>Annual Leave</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Used</value>
    </summaryFilterItems>
    <summaryForeignKey>LeaveDay__c.WorkCycle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>