force-app/main/default/objects/WorkCycle__c/fields/BusinessDayOTHour__c.field-meta.xml
<CustomField>
    <fullName>BusinessDayOTHour__c</fullName>
    <label>Business Day OT (Hour)</label>
    <summarizedField>Attendance__c.AcutalOTHour__c</summarizedField>
    <summaryFilterItems>
        <field>Attendance__c.Weekend__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attendance__c.Holiday__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attendance__c.Type__c</field>
        <operation>equals</operation>
        <value>Normal</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Work_cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>