force-app/main/default/objects/WorkCycle__c/fields/BusinessTravelDay__c.field-meta.xml
<CustomField>
    <fullName>BusinessTravelDay__c</fullName>
    <label>Business Travel Day</label>
    <summaryFilterItems>
        <field>Attendance__c.Type__c</field>
        <operation>equals</operation>
        <value>Business travel</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Work_cycle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>