force-app/main/default/objects/WorkCycle__c/fields/Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Check__c</fullName>
    <label>Duplicate Check</label>
    <length>80</length>
    <type>Text</type>
</CustomField>