force-app/main/default/objects/WorkCycle__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Work_cycle</relationshipName>
    <type>Lookup</type>
</CustomField>