force-app/main/default/objects/WorkCycle__c/fields/GrossOTHour__c.field-meta.xml
<CustomField>
    <fullName>GrossOTHour__c</fullName>
    <formula>BusinessDayOTHour__c + WeekendOTHour__c +  HolidayOTHour__c  +  TaxfreeOTHour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross OT (Hour) = Taxable OT (Hour) + Tax-free OT (Hour)</inlineHelpText>
    <label>Gross OT (Hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>