force-app/main/default/objects/WorkCycle__c/fields/Holiday_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Attendance__c</fullName>
    <label>Holiday Attendance</label>
    <summarizedField>Attendance__c.WorkDay__c</summarizedField>
    <summaryFilterItems>
        <field>Attendance__c.Holiday__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attendance__c.Type__c</field>
        <operation>equals</operation>
        <value>Normal</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Work_cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>