force-app/main/default/objects/WorkCycle__c/fields/Holiday_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Weekend__c</fullName>
    <label>Holiday + Weekend</label>
    <summarizedField>Attendance__c.AcutalOTHour__c</summarizedField>
    <summaryFilterItems>
        <field>Attendance__c.Holiday__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attendance__c.Weekend__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Work_cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>