force-app/main/default/objects/WorkCycle__c/fields/HolidayOTHour__c.field-meta.xml
<CustomField>
    <fullName>HolidayOTHour__c</fullName>
    <formula>Holiday__c +  Holiday_Weekend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holiday OT (Hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>