force-app/main/default/objects/WorkCycle__c/fields/IsLocked__c.field-meta.xml
<CustomField>
    <fullName>IsLocked__c</fullName>
    <formula>not(ISPICKVAL( Status__c , &quot;Created&quot;))</formula>
    <label>IsLocked</label>
    <type>Checkbox</type>
</CustomField>