force-app/main/default/objects/WorkCycle__c/fields/LeaveDayUsedHalf__c.field-meta.xml
<CustomField>
    <fullName>LeaveDayUsedHalf__c</fullName>
    <label>Leave Day Used (Half)</label>
    <summaryFilterItems>
        <field>LeaveDay__c.BusinessDay__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.Half_Day__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.InCycle__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>LeaveDay__c.WorkCycle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>