force-app/main/default/objects/WorkCycle__c/fields/LeaveDaywilluseFull__c.field-meta.xml
<CustomField>
    <fullName>LeaveDaywilluseFull__c</fullName>
    <label>Leave Day will use (Full)</label>
    <summaryFilterItems>
        <field>LeaveDay__c.BusinessDay__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.Half_Day__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.InCycle__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.Status__c</field>
        <operation>equals</operation>
        <value>Planned</value>
    </summaryFilterItems>
    <summaryForeignKey>LeaveDay__c.WorkCycle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>