force-app/main/default/objects/WorkCycle__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>IF (Text( Cycle__c) = &quot;January&quot;, 1, IF ( Text( Cycle__c) = &quot;February&quot;, 2, IF ( Text( Cycle__c) = &quot;March&quot;, 3,IF ( Text( Cycle__c) = &quot;April&quot;, 4,IF ( Text( Cycle__c) = &quot;May&quot;, 5,IF ( Text( Cycle__c) = &quot;June&quot;, 6, IF ( Text( Cycle__c) = &quot;July&quot;, 7,IF ( Text( Cycle__c) = &quot;August&quot;, 8,IF ( Text( Cycle__c) = &quot;September&quot;, 9,IF ( Text( Cycle__c) = &quot;October&quot;, 10,IF ( Text( Cycle__c) = &quot;November&quot;, 11, 12)))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>