force-app/main/default/objects/WorkCycle__c/fields/Month_Create__c.field-meta.xml
<CustomField>
    <fullName>Month_Create__c</fullName>
    <formula>TEXT( Month__c ) + &apos; &apos; +  Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Create</label>
    <type>Text</type>
</CustomField>