force-app/main/default/objects/WorkCycle__c/fields/Monthly_added__c.field-meta.xml
<CustomField>
    <fullName>Monthly_added__c</fullName>
    <label>Add Monthly</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>