force-app/main/default/objects/WorkCycle__c/fields/PrivilegeLeaveUsed__c.field-meta.xml
<CustomField>
    <fullName>PrivilegeLeaveUsed__c</fullName>
    <label>Privilege Leave Used</label>
    <summaryFilterItems>
        <field>LeaveDay__c.Paid_Type__c</field>
        <operation>equals</operation>
        <value>Privilege Leave</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.Status__c</field>
        <operation>equals</operation>
        <value>Used</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.BusinessDay__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.InCycle__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>LeaveDay__c.WorkCycle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>