force-app/main/default/objects/WorkCycle__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <label>Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>