force-app/main/default/objects/WorkCycle__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee Rejected Payslip</fullName>
            </value>
            <value>
                <fullName>Approved to Fix</fullName>
            </value>
            <value>
                <fullName>Rejected to Fix</fullName>
            </value>
            <value>
                <fullName>HR Fix</fullName>
            </value>
            <value>
                <fullName>Final Approval</fullName>
            </value>
            <value>
                <fullName>Final Rejection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>