force-app/main/default/objects/WorkCycle__c/fields/TaxableOTHour__c.field-meta.xml
<CustomField>
    <fullName>TaxableOTHour__c</fullName>
    <formula>BusinessDayOTHour__c + WeekendOTHour__c + HolidayOTHour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Taxable OT (Hour) = Business Day OT (Hour) + Weekend OT (Hour) +Holiday OT (Hour)</inlineHelpText>
    <label>Taxable OT (Hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>