force-app/main/default/objects/WorkCycle__c/fields/TaxfreeOTHour__c.field-meta.xml
<CustomField>
    <fullName>TaxfreeOTHour__c</fullName>
    <inlineHelpText>Total plus hour for (including in Business Day, Weekend, Holiday) in a cycle</inlineHelpText>
    <label>Tax-free OT (Hour)</label>
    <summarizedField>Attendance__c.TaxfreeOTHour__c</summarizedField>
    <summaryForeignKey>Attendance__c.Work_cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>