force-app/main/default/objects/WorkCycle__c/fields/TaxfreeWorkDay__c.field-meta.xml
<CustomField>
    <fullName>TaxfreeWorkDay__c</fullName>
    <inlineHelpText>Total plus days for working on the weekend/holiday in a cycle</inlineHelpText>
    <label>Tax-free Work Day</label>
    <summarizedField>Attendance__c.TaxfreeWorkDay__c</summarizedField>
    <summaryForeignKey>Attendance__c.Work_cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>