force-app/main/default/objects/WorkCycle__c/fields/UnpaidLeaveHalf__c.field-meta.xml
<CustomField>
    <fullName>UnpaidLeaveHalf__c</fullName>
    <label>Unpaid Leave (Half)</label>
    <summaryFilterItems>
        <field>LeaveDay__c.IsValid__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.Paid_Type__c</field>
        <operation>equals</operation>
        <value>Unpaid Leave</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.Half_Day__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.BusinessDay__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.Status__c</field>
        <operation>equals</operation>
        <value>Used</value>
    </summaryFilterItems>
    <summaryForeignKey>LeaveDay__c.WorkCycle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>