force-app/main/default/objects/WorkCycle__c/fields/UnpaidLeaveRemnantfromAnnual__c.field-meta.xml
<CustomField>
    <fullName>UnpaidLeaveRemnantfromAnnual__c</fullName>
    <formula>abs(min(
+ Annual_Leave_Current_Year_Last_Cycle__c
+ AddSeniority__c
+ Monthly_added__c
+ AdjustAnnualLeave__c
- max(AnnualLeaveDaysFull__c-Annual_Leave_Last_Year_Last_Cycle__c,0)
, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Leave - Remnant from Annual</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>