force-app/main/default/objects/WorkCycle__c/fields/UnpaidLeaveUsed__c.field-meta.xml
<CustomField>
    <fullName>UnpaidLeaveUsed__c</fullName>
    <formula>UnpaidLeavefromRequest__c +  UnpaidLeaveRemnantfromAnnual__c +  UnpaidLeaveHalf__c / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Leave Used</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>