force-app/main/default/objects/WorkCycle__c/fields/WFHDayPlanned__c.field-meta.xml
<CustomField>
    <fullName>WFHDayPlanned__c</fullName>
    <label>WFH Day Planned</label>
    <summaryFilterItems>
        <field>Attendance__c.Holiday__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attendance__c.Weekend__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attendance__c.InCycle__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attendance__c.WFHStatus__c</field>
        <operation>equals</operation>
        <value>Planned</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attendance__c.Type__c</field>
        <operation>equals</operation>
        <value>Work From Home</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Work_cycle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>