force-app/main/default/objects/WorkCycle__c/fields/WorkDay__c.field-meta.xml
<CustomField>
    <fullName>WorkDay__c</fullName>
    <label>Work Day</label>
    <summarizedField>Attendance__c.WorkDay__c</summarizedField>
    <summaryFilterItems>
        <field>Attendance__c.Type__c</field>
        <operation>equals</operation>
        <value>Normal</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Work_cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>